@@ -132,7 +132,7 @@ L<additional temporary files|https://www.sqlite.org/tempfiles.html> safely.
 =head1 EXAMPLES
 
 This distribution also contains a well-structured example
-L<blog application|https://github.com/kraih/mojo-pg/tree/master/examples/blog>
+L<blog application|https://github.com/Grinnz/Mojo-SQLite/tree/master/examples/blog>
 you can use for inspiration. This application shows how to apply the MVC design
 pattern in practice.
 
@@ -172,7 +172,7 @@ C<quote_char> to C<">.
   $sql     = $sql->auto_migrate($bool);
 
 Automatically migrate to the latest database schema with L</"migrations">, as
-soon as the first database connection has been established.
+soon as L</"db"> has been called for the first time.
 
 =head2 database_class
 
@@ -222,6 +222,14 @@ L<DBI/"ATTRIBUTES COMMON TO ALL HANDLES"> and
 L<DBD::SQLite/"DRIVER PRIVATE ATTRIBUTES"> for more information on available
 options.
 
+=head2 parent
+
+  my $parent = $sql->parent;
+  $sql       = $sql->parent(Mojo::SQLite->new);
+
+Another L<Mojo::SQLite> object to use for connection management, instead of
+establishing and caching our own database connections.
+
 =head2 pubsub
 
 This attribute is L<DEPRECATED|Mojo::SQLite::PubSub/"DESCRIPTION">.
@@ -236,6 +244,7 @@ the following new ones.
   my $sql = Mojo::SQLite->new;
   my $sql = Mojo::SQLite->new('file:test.db);
   my $sql = Mojo::SQLite->new('sqlite:test.db');
+  my $sql = Mojo::SQLite->new(Mojo::SQLite->new);
 
 Construct a new L<Mojo::SQLite> object and parse connection string with
 L</"from_string"> if necessary.
@@ -293,15 +302,17 @@ passed as the second argument.
   $sql = $sql->from_string('file:test.db');
   $sql = $sql->from_string('file:///C:/foo/bar.db');
   $sql = $sql->from_string('sqlite:C:%5Cfoo%5Cbar.db');
+  $sql = $sql->from_string(Mojo::SQLite->new);
 
-Parse configuration from connection string. Connection strings are parsed as
-URLs, so you should construct them using a module like L<Mojo::URL>,
-L<URI::file>, or L<URI::db>. For portability on non-Unix-like systems, either
-construct the URL with the C<sqlite> scheme, or use L<URI::file/"new"> to
-construct a URL with the C<file> scheme. A URL with no scheme will be parsed as
-a C<file> URL, and C<file> URLs are parsed according to the current operating
-system. If specified, the hostname must be C<localhost>. If the URL has a query
-string, it will be parsed and applied to L</"options">.
+Parse configuration from connection string or use another L<Mojo::SQLite>
+object as L</"parent">. Connection strings are parsed as URLs, so you should
+construct them using a module like L<Mojo::URL>, L<URI::file>, or L<URI::db>.
+For portability on non-Unix-like systems, either construct the URL with the
+C<sqlite> scheme, or use L<URI::file/"new"> to construct a URL with the C<file>
+scheme. A URL with no scheme will be parsed as a C<file> URL, and C<file> URLs
+are parsed according to the current operating system. If specified, the
+hostname must be C<localhost>. If the URL has a query string, it will be parsed
+and applied to L</"options">.
 
   # Absolute filename
   $sql->from_string('sqlite:////home/fred/data.db');
